--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">GoDriving</string>
+    <string name="didi">滴滴</string>
+    <string name="dida">嘀嗒</string>
+
+    <array name="arr">
+        <item>@string/dida</item>
+        <item>@string/didi</item>
+    </array>
 </resources>
